--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,25 @@ body {
   animation: cloudMove 23s linear infinite;
   top: 75%;
 }
+/* Add these styles to your CSS file */
+
+/* WebKit Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 @keyframes cloudMove {
   from {
